--- a/index_initialization.ipynb
+++ b/index_initialization.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "id": "a00e032c",
-      "metadata": {
-        "id": "a00e032c"
-      },
-      "source": [
-        "***Important*** DO NOT CLEAR THE OUTPUT OF THIS NOTEBOOK AFTER EXECUTION!!!"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "id": "5ac36d3a",
@@ -497,19 +487,118 @@
         "def calculate_df(postings):\n",
         "    return postings.mapValues(lambda posting_lst: len(posting_lst))\n",
         "\n",
+        "def calculate_tf(postings):\n",
+        "    term_count = postings.flatMap(lambda x: [(x[0], len(x[1]))])\n",
+        "    term_sum = term_count.reduceByKey(lambda x, y: x + y)\n",
+        "    term_total = term_sum.aggregateByKey(lambda x, y: x + y, lambda x, y: x + y)\n",
+        "    return term_total\n",
+        "\n",
         "def partition_postings_and_write(postings):\n",
-        "    return postings.map(lambda posting: (token2bucket_id(posting[0]), [(posting[0], posting[1])])).reduceByKey(lambda x, y: x + y).map(lambda posting: InvertedIndex.write_a_posting_list(posting,bucket_name))\n"
+        "    return postings.map(lambda posting: (token2bucket_id(posting[0]), [(posting[0], posting[1])])).reduceByKey(lambda x, y: x + y).map(lambda posting: InvertedIndex.write_a_posting_list(posting,bucket_name))\n",
+        "\n",
+        "def get_docs_length(postings):\n",
+        "    doc_counts = postings.flatMap(lambda x: [(x[0], count) for count in x[1]])\n",
+        "    doc_lengths = doc_counts.aggregateByKey(0, lambda x, y: x + y, lambda x, y: x + y)\n",
+        "    return doc_lengths\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# TITLE"
+        "# TITLE\n",
+        "docs_title_pairs = parquetFile.select(\"id\",\"title\")\n",
+        "docs_title_pairs_dict = dict(docs_title_pairs.collect())\n",
+        "with open(\"titles.json\", \"w\") as _json:\n",
+        "    json.dump(docs_title_pairs_dict, _json)\n",
+        "title_src = \"titles.json\"\n",
+        "title_dst = f\"gs://{bucket_name}/titles/{titles_src}\""
       ],
       "metadata": {
         "id": "sKx8I2Vnx90g"
       },
       "id": "sKx8I2Vnx90g",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!gsutil cp $title_src $title_dst"
+      ],
+      "metadata": {
+        "id": "SwvRtFmETfx2"
+      },
+      "id": "SwvRtFmETfx2",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_counts_title = docs_title_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
+        "postings_titles = word_counts_title.groupByKey().mapValues(reduce_word_counts)\n",
+        "t2df_title = calculate_df(postings_titles).collectAsMap()\n",
+        "title_length = get_docs_length(postings_titles)\n",
+        "total_title = calculate_tf(postings_titles)\n",
+        "_ = partition_postings_and_write(postings_titles, \"titles\").collect()"
+      ],
+      "metadata": {
+        "id": "ezWH5bmNTmaj"
+      },
+      "id": "ezWH5bmNTmaj",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# collect all posting lists locations into one super-set\n",
+        "titles_posting_locs = defaultdict(list)\n",
+        "for blob in client.list_blobs(bucket_name, prefix='titles'):\n",
+        "  if not blob.name.endswith(\"pickle\"):\n",
+        "    continue\n",
+        "  with blob.open(\"rb\") as f:\n",
+        "    posting_locs = pickle.load(f)\n",
+        "    for k, v in posting_locs.items():\n",
+        "      titles_posting_locs[k].extend(v)"
+      ],
+      "metadata": {
+        "id": "8BmivfYuc2Eb"
+      },
+      "id": "8BmivfYuc2Eb",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create inverted index instance\n",
+        "inverted = InvertedIndex()\n",
+        "inverted.posting_locs = titles_posting_locs\n",
+        "inverted.df = t2df_title\n",
+        "inverted.doc_length = title_length.collectAsMap()\n",
+        "inverted.term_total = total_title.collectAsMap()\n",
+        "inverted.write_index('.', 'title_index')\n",
+        "index_src = \"title_index.pkl\"\n",
+        "index_dst = f'gs://{bucket_name}/titles/{index_src}'"
+      ],
+      "metadata": {
+        "id": "3TQjI5TKdeKw"
+      },
+      "id": "3TQjI5TKdeKw",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!gsutil cp $index_src $index_dst"
+      ],
+      "metadata": {
+        "id": "WsHtmOGPgCAq"
+      },
+      "id": "WsHtmOGPgCAq",
       "execution_count": null,
       "outputs": []
     },
