--- a/index_initialization.ipynb
+++ b/index_initialization.ipynb
@@ -372,16 +372,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "701811af",
-      "metadata": {
-        "id": "701811af"
-      },
-      "source": [
-        "Let's import the inverted index module. Note that you need to use the staff-provided version called `inverted_index_gcp.py`, which contains helper functions to writing and reading the posting files similar to the Colab version, but with writing done to a Google Cloud Storage bucket."
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "id": "121fe102",
@@ -461,9 +451,6 @@
         "def token2bucket_id(token):\n",
         "    return int(_hash(token),16) % NUM_BUCKETS\n",
         "\n",
-        "# PLACE YOUR CODE HERE\n",
-        "#################################\n",
-        "#  STEMMING AND STOP WORDS\n",
         "\n",
         "def filter_tokens(tokens, tokens2remove=None, use_stemming=True):\n",
         "  stemmer = PorterStemmer()\n",
@@ -472,14 +459,16 @@
         "  if use_stemming:\n",
         "    tokens = [stemmer.stem(tok) for tok in tokens]\n",
         "  return tokens\n",
-        "#################################\n",
+        "\n",
         "def word_count(text, id):\n",
-        "    #tokens = filter_tokens()\n",
         "    tokens = [token.group() for token in RE_WORD.finditer(text.lower())]\n",
         "    tokens = filter_tokens(tokens,all_stopwords, True)\n",
         "    freq_dict = {word: tokens.count(word) for word in tokens if word not in all_stopwords}\n",
         "    ret = [(word, (id, freq_dict[word])) for word in freq_dict.keys()]\n",
         "    return ret\n",
+        "\n",
+        "def word_count_anchors(id, text):\n",
+        "    return word_count(tokenize_anchor(text), id)\n",
         "\n",
         "def reduce_word_counts(unsorted_pl):\n",
         "    return sorted(unsorted_pl)\n",
@@ -500,6 +489,10 @@
         "    doc_counts = postings.flatMap(lambda x: [(x[0], count) for count in x[1]])\n",
         "    doc_lengths = doc_counts.aggregateByKey(0, lambda x, y: x + y, lambda x, y: x + y)\n",
         "    return doc_lengths\n",
+        "\n",
+        "def tokenize_anchor(anchors):\n",
+        "    tokens = [token[1] for token in anchors]\n",
+        "    return ' '.join(tokens)\n",
         "\n"
       ]
     },
@@ -1005,40 +998,14 @@
       ],
       "source": [
         "# BODY\n",
-        "# time the index creation time\n",
-        "t_start = time()\n",
-        "# word counts map\n",
         "word_counts = doc_text_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
         "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
-        "# filtering postings and calculate df\n",
         "postings_filtered = postings.filter(lambda x: len(x[1])>50)\n",
+        "total_body = calculate_tf(postings_filtered)\n",
+        "body_length = get_docs_length(postings_filtered)\n",
         "w2df = calculate_df(postings_filtered)\n",
         "w2df_dict = w2df.collectAsMap()\n",
-        "# partition posting lists and write out\n",
-        "_ = partition_postings_and_write(postings_filtered).collect()\n",
-        "index_const_time = time() - t_start"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3dbc0e14",
-      "metadata": {
-        "id": "3dbc0e14",
-        "nbgrader": {
-          "grade": true,
-          "grade_id": "cell-index_const_time",
-          "locked": true,
-          "points": 10,
-          "schema_version": 3,
-          "solution": false,
-          "task": false
-        }
-      },
-      "outputs": [],
-      "source": [
-        "# test index construction time\n",
-        "assert index_const_time < 2*60*120"
+        "_ = partition_postings_and_write(postings_filtered, \"body\").collect()"
       ]
     },
     {
@@ -1061,7 +1028,7 @@
       "source": [
         "# collect all posting lists locations into one super-set\n",
         "super_posting_locs = defaultdict(list)\n",
-        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp'):\n",
+        "for blob in client.list_blobs(bucket_name, prefix='body'):\n",
         "    if not blob.name.endswith(\"pickle\"):\n",
         "        continue\n",
         "    with blob.open(\"rb\") as f:\n",
@@ -1104,6 +1071,8 @@
         "inverted = InvertedIndex()\n",
         "# Adding the posting locations dictionary to the inverted index\n",
         "inverted.posting_locs = super_posting_locs\n",
+        "inverted.doc_length = body_length.collectAsMap()\n",
+        "inverted.term_total = total_body.collectAsMap()\n",
         "# Add the token - df dictionary to the inverted index\n",
         "inverted.df = w2df_dict\n",
         "# write the global stats out\n",
@@ -1113,6 +1082,18 @@
         "index_dst = f'gs://{bucket_name}/postings_gcp/{index_src}'\n",
         "!gsutil cp $index_src $index_dst"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!gsutil cp $index_src $index_dst"
+      ],
+      "metadata": {
+        "id": "Ll5ZnUXElWJF"
+      },
+      "id": "Ll5ZnUXElWJF",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1160,24 +1141,6 @@
       },
       "source": [
         "# PageRank"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "0875c6bd",
-      "metadata": {
-        "id": "0875c6bd",
-        "nbgrader": {
-          "grade": false,
-          "grade_id": "cell-2fee4bc8d83c1e2a",
-          "locked": true,
-          "schema_version": 3,
-          "solution": false,
-          "task": false
-        }
-      },
-      "source": [
-        "**YOUR TASK (10 POINTS):** Compute PageRank for the entire English Wikipedia. Use your implementation for `generate_graph` function from Colab below."
       ]
     },
     {
@@ -1376,7 +1339,6 @@
         }
       ],
       "source": [
-        "t_start = time()\n",
         "pages_links = parquetFile.select (\"id\",\"anchor_text\").rdd\n",
         "# construct the graph\n",
         "edges, vertices = generate_graph(pages_links)\n",
@@ -1387,9 +1349,8 @@
         "pr_results = g.pageRank(resetProbability=0.15, maxIter=6)\n",
         "pr = pr_results.vertices.select(\"id\", \"pagerank\")\n",
         "pr = pr.sort(col('pagerank').desc())\n",
-        "pr.repartition(1).write.csv(f'gs://{bucket_name}/pr', compression=\"gzip\")\n",
-        "pr_time = time() - t_start\n",
-        "pr.show()"
+        "# pr.repartition(1).write.csv(f'gs://{bucket_name}/pr', compression=\"gzip\")\n",
+        "# pr.show()"
       ]
     },
     {
@@ -1410,91 +1371,99 @@
       },
       "outputs": [],
       "source": [
-        "# test that PageRank computaion took less than 2 hour\n",
-        "assert pr_time < 2*60*60"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "96e9a610",
-      "metadata": {
-        "id": "96e9a610"
-      },
-      "source": [
-        "# Reporting"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "a1da57c7",
-      "metadata": {
-        "id": "a1da57c7"
-      },
-      "source": [
-        "**YOUR TASK (5 points):** execute and complete the following lines to complete\n",
-        "the reporting requirements for assignment #3."
+        "pr_dict = {int(row[0]): row[1] for _, row in pr.toPandas().iterrows()}\n",
+        "with open(\"pr.json\", \"w\") as pr:\n",
+        "    json.dump(pr_dict, pr)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "0f0d5523",
-      "metadata": {
-        "id": "0f0d5523",
-        "nbgrader": {
-          "grade": false,
-          "grade_id": "cell-size_ofi_input_data",
-          "locked": true,
-          "schema_version": 3,
-          "solution": false,
-          "task": false
-        },
-        "outputId": "54595c29-4ae3-4b78-86d0-d8457ae9c150"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "14.28 GiB    gs://wikidata_preprocessed\r\n"
-          ]
-        }
-      ],
       "source": [
-        "# size of input data\n",
-        "!gsutil du -sh \"gs://wikidata_preprocessed/\""
-      ]
+        "pr_src = \"pr.json\"\n",
+        "pr_dst = f'gs://{bucket_name}/pr/{pr_src}'\n",
+        "!gsutil cp $pr_src $pr_dst"
+      ],
+      "metadata": {
+        "id": "lHtQl3gv0bku"
+      },
+      "id": "lHtQl3gv0bku",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "ce25a98a",
-      "metadata": {
-        "id": "ce25a98a",
-        "nbgrader": {
-          "grade": false,
-          "grade_id": "cell-size_of_index_data",
-          "locked": true,
-          "schema_version": 3,
-          "solution": false,
-          "task": false
-        },
-        "outputId": "44d9721a-1cd7-4e59-9f78-5439864cfdad"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "5.92 GiB     gs://ehzor324/postings_gcp\r\n"
-          ]
-        }
-      ],
       "source": [
-        "# size of index data\n",
-        "index_dst = f'gs://{bucket_name}/postings_gcp/'\n",
-        "!gsutil du -sh \"$index_dst\""
-      ]
+        "# ANCHOR\n",
+        "anchors_pairs = parquetFile.select (\"id\",\"anchor_text\").rdd\n",
+        "word_count_anchor = docs_anchors_pairs.flatMap(lambda x: word_count_anchor(x[0], x[1]))\n",
+        "anchor_postings = word_count_anchor.groupByKey().mapValues(reduce_word_counts)\n",
+        "#anchor_postings.first()\n",
+        "w2df = calculate_df(anchor_postings)\n",
+        "anchor_length = get_docs_length(anchor_postings)\n",
+        "w2df_dict = w2df.collectAsMap()\n",
+        "total_anchor = calculate_tf(anchor_postings)\n",
+        "# partition posting lists and write out\n",
+        "# calculate total terms\n",
+        "_ = partition_postings_and_write(anchor_postings, \"anchor\").collect()"
+      ],
+      "metadata": {
+        "id": "VsKIhl4h0weg"
+      },
+      "id": "VsKIhl4h0weg",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# collect all posting lists locations into one super-set\n",
+        "anchor_posting_locs = defaultdict(list)\n",
+        "for blob in client.list_blobs(bucket_name, prefix='anchor'):\n",
+        "  if not blob.name.endswith(\"pickle\"):\n",
+        "    continue\n",
+        "  with blob.open(\"rb\") as f:\n",
+        "    posting_locs = pickle.load(f)\n",
+        "    for k, v in posting_locs.items():\n",
+        "      anchor_posting_locs[k].extend(v)"
+      ],
+      "metadata": {
+        "id": "GdDBhCNC8db8"
+      },
+      "id": "GdDBhCNC8db8",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create inverted index instance\n",
+        "inverted = InvertedIndex()\n",
+        "inverted.posting_locs = anchor_posting_locs\n",
+        "inverted.doc_length = anchor_length.collectAsMap()\n",
+        "inverted.df = w2df_dict\n",
+        "inverted.term_total = total_anchor.collectAsMap()\n",
+        "inverted.write_index('.', 'anchor_index')\n",
+        "index_src = \"anchor_index.pkl\"\n",
+        "index_dst = f'gs://{bucket_name}/anchor/{index_src}'"
+      ],
+      "metadata": {
+        "id": "GVdtuQNT8jBn"
+      },
+      "id": "GVdtuQNT8jBn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!gsutil ls -lh $index_dst"
+      ],
+      "metadata": {
+        "id": "aLnW9wrV9Yus"
+      },
+      "id": "aLnW9wrV9Yus",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
